# hsl-ish

./: Cargo.toml  README.md
src/: hsl.rs  lib.rs  main.rs  rgb.rs
